--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <p>here</p>
+    <div id="intro">
+        <div id="banner">
+            <div><img src="./img/odin-lined.png" alt="The Odin Project logo"></div>
+            <div><p>ODIN</p></div>
+        </div>
+        <p>Photo by <a href="https://unsplash.com/@scottwebb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Webb</a> on <a href="https://unsplash.com/photos/shallow-focus-photography-of-red-brown-and-white-glass-panel-wall-building-under-blue-sky-BdZ2usvdDgQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+    </div>
+    <div id="signup"></div>
 </body>
 </html>
