Finish styling of visual half of webpage
The left half of the webpage already included a custom background
image and some basic styling. However, more styling has been added.
This inlcudes adding a dark background for the webpage logo and name
to make it stand out visually, changing the font color of the credit
at the bottom so that it contrasts more with the background. and
clamping the width of the image between two values so that it does
not become too big or too smal depending on the page size and
changes dynamically as the page is resized.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="intro">
         <div id="banner">
-            <div><img src="./img/odin-lined.png" alt="The Odin Project logo"></div>
-            <div><p>ODIN</p></div>
+            <img src="./img/odin-lined.png" alt="The Odin Project logo">
+            <p>ODIN</p>
         </div>
         <p>Photo by <a href="https://unsplash.com/@scottwebb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Webb</a> on <a href="https://unsplash.com/photos/shallow-focus-photography-of-red-brown-and-white-glass-panel-wall-building-under-blue-sky-BdZ2usvdDgQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
     </div>
