Create structure for sign up form
The right half of the webpage contains further information about
the webpage and a form for the user to sign up for an account. The
structure for the portion has been added to the HTML.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         </div>
         <p>Photo by <a href="https://unsplash.com/@scottwebb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Webb</a> on <a href="https://unsplash.com/photos/shallow-focus-photography-of-red-brown-and-white-glass-panel-wall-building-under-blue-sky-BdZ2usvdDgQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
     </div>
-    <div id="signup"></div>
+    <div id="signup">
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to.</p>
+        <form>
+            <legend>Let's do this!</legend>
+            <input type="text" name="firstname" id="firstname">
+            <input type="text" name="lastname" id="lastname">
+            <input type="email" name="email" id="email">
+            <input type="tel" name="phonenumber" id="phonenumber">
+            <input type="password" name="password" id="password">
+            <input type="password" name="confirmpassword" id="confirmpassword">
+            <button type="submit">Create Account</button>
+        </form>
+        <p>Already have an account? <a href="#">Log in</a></p>
+    </div>
 </body>
 </html>
