Create error message for matching password fields
An error message needs to be displayed if the two password fields
do not match. Before, this was accomplished with the ::after pseudo-
element, but this cannot be changed dynamically, so it did not work.
Now, there is a new span element for this error message. Its
visibility will be updated dynamically when the passwords do and do
not match.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                     <label for="phonenumber">PHONE NUMBER</label>
                     <input type="tel" name="phonenumber" id="phonenumber" required>
                 </div>
-                <div class="info">
+                <div class="info" id="passBox">
                     <label for="password">PASSWORD</label>
                     <input type="password" name="password" id="password" required>
+                    <span>* Passwords do not match</span>
                 </div>
                 <div class="info">
                     <label for="confirmpassword">CONFIRM PASSWORD</label>
